--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,10 @@
 body {
-  font-family: Arial, sans-serif;
-  /* background: url(http://www.shukatsu-note.com/wp-content/uploads/2014/12/computccooooer-564136_1280.jpg) no-repeat; */
+  font-family: SF Pro Display, sans-serif;
   background-color:#5A5A5A; 
   background-size: cover;
   height: 100vh;
 }
 
-h1 {
-  text-align: center;
-  font-family: Tahoma, Arial, sans-serif;
-  color: #06D85F;
-  margin: 80px 0;
-}
-
-.box {
-  width: 40%;
-  margin: 0 auto;
-  background: rgba(255,255,255,0.2);
-  padding: 35px;
-  border: 2px solid #fff;
-  border-radius: 20px/50px;
-  background-clip: padding-box;
-  text-align: center;
-}
-
-.button {
-  font-size: 1em;
-  padding: 10px;
-  color: #fff;
-  border: 2px solid #06D85F;
-  border-radius: 20px/50px;
-  text-decoration: none;
-  cursor: pointer;
-  transition: all 0.3s ease-out;
-}
-.button:hover {
-  background: #06D85F;
-}
 
 .overlay {
   position: fixed;
@@ -109,17 +77,6 @@ height: 150px;
 width: 100%;
 }
 
-button {
-  width: 148px;
-height: 48px;
-left: calc(50% - 152px/2 + 0.5px);
-bottom: 22px;
-
-background: #D47E36;
-border-radius: 7px;
-color: #FFFFFF;
-margin-top: 20px;
-}
 
 @media screen and (max-width: 700px){
   .box{
