--- a/src/pages/OverLay.module.css
+++ b/src/pages/OverLay.module.css
@@ -92,6 +92,22 @@
   width: 100%;
   }
 
+
+  
+  textarea:focus {
+    border: 1px solid rgba(210, 120, 45, 0.45) !important;
+    box-shadow: 0 0 3px rgba(210, 120, 45, 0.45) !important;
+    -moz-box-shadow: 0 0 3px rgba(210, 120, 45, 0.45) !important;
+    -webkit-box-shadow: 0 0 3px rgba(210, 120, 45, 0.45) !important;
+    }
+    
+    textarea:focus {
+    outline-offset: 0px !important;
+    outline: none !important;
+    }
+  
+ 
+
   @media screen and (max-width: 1068px){
     .popup h2 {
       font-size: large;
