--- a/src/pages/OverLay.module.css
+++ b/src/pages/OverLay.module.css
@@ -35,13 +35,14 @@
 }
 .question {
   margin-top: 28px;
-  width: 50%;
+  width: 80%;
 }
 .popup h2 {
   color: #191a1a;
   font-family: SF Pro Display, sans-serif;
   font-weight: 500;
   text-align: center;
+  margin: 2vh;
 }
 .popup .close {
   position: absolute;
