--- a/src/pages/AfterSubmit.module.css
+++ b/src/pages/AfterSubmit.module.css
@@ -4,6 +4,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  background: rgba(0, 0, 0, 0.7);
   transition: opacity 500ms;
   display: flex;
   justify-content: center;
